@@ -1,9 +1,12 @@
-2012-06-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+2012-07-?? 2.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* Change field names in Tev records according to the GND format
+	* Add ability to start the tree with more than one element
+
+2012-06-01 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Clean up class structure.
 	* Add option for column style display.
 	* Reduce superfluous CSV file imports.
 	* Drop TYPO3 4.5 compatibility
-	* Change field names in Tev records according to the GND format
 
 2012-02-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.
